--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Brian/Downloads/twitter4j-4.0.4.zip"/>
+	<classpathentry kind="lib" path="C:/Users/Brian/Downloads/facebook4j-core-2.4.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
