--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,18 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.5.0</version>
 		</dependency>
+		
+		<dependency>
+           <groupId>org.twitter4j</groupId>
+           <artifactId>twitter4j-core</artifactId>
+           <version>4.0.4</version>
+       </dependency>
+       
+       <dependency>
+  <groupId>org.facebook4j</groupId>
+  <artifactId>facebook4j-core</artifactId>
+  <version>2.4.4</version>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
