--- a/pom.xml
+++ b/pom.xml
@@ -20,19 +20,52 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.0.1</version>
+    <scope>provided</scope>
+</dependency>
 		 <!-- Spring 3 dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
+		<dependency>
+    		<groupId>org.springframework</groupId>
+    		<artifactId>spring-aop</artifactId>
+    		<version>${spring.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 
+		<dependency>
+        	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-config</artifactId>
+        	<version>4.1.1.RELEASE</version>
+    	</dependency>
+    	<dependency>
+  			<groupId>org.springframework.security</groupId>
+  	 		<artifactId>spring-security-core</artifactId>
+    		<version>4.1.1.RELEASE</version>
+		</dependency>
+		
+		<dependency>
+        	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-web</artifactId>
+        	<version>4.1.1.RELEASE</version>
+    	</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -70,7 +103,11 @@
 		    <artifactId>spring-jdbc</artifactId>
 		    <version>${spring.version}</version>
 		</dependency>
-			
+		 <dependency>
+        	<groupId>com.google.appengine</groupId>
+        	<artifactId>appengine-api-1.0-sdk</artifactId>
+        	<version>1.9.25</version>
+    	</dependency>	
 		
 	</dependencies>
 	<build>
@@ -110,6 +147,11 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+            <plugin>
+    			<groupId>com.google.appengine</groupId>
+    			<artifactId>appengine-maven-plugin</artifactId>
+    			<version>1.9.38</version>
+			</plugin>
 		</plugins>
 
 		<finalName>baseball-league</finalName>
