--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
 			<version>2.6.3</version>
 		</dependency>
 		
+		<dependency>
+		  	<groupId>joda-time</groupId>
+		  	<artifactId>joda-time</artifactId>
+		  	<version>2.9.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
