--- a/pom.xml
+++ b/pom.xml
@@ -15,22 +15,27 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.1</version>
 			<scope>test</scope>
 		</dependency>
-		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
             <version>3.3.6</version>
-                <exclusions>
-        <exclusion>
-            <groupId>org.webjars</groupId>
-            <artifactId>jquery</artifactId>
-        </exclusion>
-    </exclusions>
+            <exclusions>
+		        <exclusion>
+		            <groupId>org.webjars</groupId>
+		            <artifactId>jquery</artifactId>
+		        </exclusion>
+	    	</exclusions>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
