--- a/pom.xml
+++ b/pom.xml
@@ -130,11 +130,11 @@
 		    <artifactId>spring-jdbc</artifactId>
 		    <version>${spring.version}</version>
 		</dependency>
-		 <dependency>
+		 <!-- <dependency>
         	<groupId>com.google.appengine</groupId>
         	<artifactId>appengine-api-1.0-sdk</artifactId>
         	<version>1.9.25</version>
-    	</dependency>	
+    	</dependency> -->	
 		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
