--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 		</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-<filter>
+<!-- <filter>
   <filter-name>springSecurityFilterChain</filter-name>
   <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 </filter>
@@ -20,7 +20,7 @@
 <filter-mapping>
   <filter-name>springSecurityFilterChain</filter-name>
   <url-pattern>/*</url-pattern>
-</filter-mapping>
+</filter-mapping> -->
       
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
